--- a/style.css
+++ b/style.css
@@ -14,14 +14,20 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    column-gap: 10px;
-    row-gap: 10px;
+
 }
 
 @media (orientation: landscape) {
     .con {
         width: 90vh;
         height: 90vh;
+        column-gap: 2vh;
+        row-gap: 2vh;
+    }
+
+    .block {
+        box-shadow: 1vh 1vh 2vh #d1d4df, -1vh -1vh 2vh #f5f8ff;
+        border-radius: 3vh;
     }
 }
 
@@ -29,13 +35,18 @@
     .con {
         width: 90vw;
         height: 90vw;
+        column-gap: 2vw;
+        row-gap: 2vw;
+    }
+
+    .block {
+        box-shadow: 1vw 1vw 2vw #d1d4df, -1vw -1vw 2vw #f5f8ff;
+        border-radius: 3vw;
     }
 }
 
 .block {
-    border-radius: 15px;
     background: #e3e6f2;
-    box-shadow: 5px 5px 10px #d1d4df, -5px -5px 10px #f5f8ff;
 }
 
 @font-face {
