--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@
 
 @media (orientation: landscape) {
     .con {
-        width: 90vh;
-        height: 90vh;
+        width: 1000px;
+        height: 1000px;
         column-gap: 2vh;
         row-gap: 2vh;
     }
@@ -33,8 +33,8 @@
 
 @media (orientation: portrait) {
     .con {
-        width: 90vw;
-        height: 90vw;
+        width: 1000px;
+        height: 1000px;
         column-gap: 2vw;
         row-gap: 2vw;
     }
