--- a/neu(1000px)/style.css
+++ b/neu(1000px)/style.css
@@ -40,7 +40,7 @@
     row-gap: 20px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-
+    zoom: 110%;
 }
 
 .block {
