--- a/neu(1000px)/style.css
+++ b/neu(1000px)/style.css
@@ -55,13 +55,13 @@
     transition: 0.5s;
 }
 
-.blockint:hover {
+.blockint:active {
     box-shadow: 1px 1px 2px #d1d4df, -1px -1px 2px #f5f8ff;
     transition: 0.1s;
     filter: opacity(70%);
 }
 
-.blockint:active {
+.blockintt:active {
     box-shadow: inset 10px 10px 20px #d1d4df, inset -10px -10px 20px #f5f8ff;
     transition: 0.3s;
     filter: brightness(100%);
@@ -70,6 +70,11 @@
 @font-face {
     font-family: avant;
     src: url(ITC\ Avant\ Garde\ Gothic\ Demi/avantgarde_demi.ttf);
+}
+
+@font-face {
+    font-family: catallina;
+    src: url(fonts/Catallina.otf);
 }
 
 .brightrange {  
