--- a/neu(1000px)/style.css
+++ b/neu(1000px)/style.css
@@ -55,6 +55,12 @@
     transition: 0.5s;
 }
 
+.blockint:hover {
+    box-shadow: 1px 1px 2px #d1d4df, -1px -1px 2px #f5f8ff;
+    transition: 0.1s;
+    filter: opacity(70%);
+}
+
 .blockint:active {
     box-shadow: 1px 1px 2px #d1d4df, -1px -1px 2px #f5f8ff;
     transition: 0.1s;
