--- a/style.css
+++ b/style.css
@@ -50,3 +50,13 @@
 .contact-item img:hover {
     transform: scale(1.1); /* Hover effect for icons */
 }
+
+#scrollToTopBtn {
+    display: none; /* 기본적으로 버튼을 숨깁니다. */
+    opacity: 0.7;
+    transition: opacity 0.3s;
+}
+
+#scrollToTopBtn:hover {
+    opacity: 1; /* 마우스 오버 시 버튼을 더 선명하게 표시 */
+}
