--- a/style.css
+++ b/style.css
@@ -125,8 +125,8 @@
     width: 100%;
     margin: auto;
     overflow: hidden;
-    border: 2px solid #ccc;
-    border-radius: 10px;
+    border: 0px solid #ccc;
+    border-radius: 0px;
 }
 
 .custom-carousel-track {
@@ -154,7 +154,7 @@
 }
 
 .custom-button {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0);
     color: white;
     border: none;
     padding: 10px;
@@ -165,10 +165,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 50%;
+    transition: 0.3s ease;
 }
 
 .custom-button:hover {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0);
+    opacity: 100%;
+    transition: 0.3s ease;
 }
 
 .custom-indicators {
@@ -178,6 +182,8 @@
     transform: translateX(-50%);
     text-align: center;
     z-index: 2; /* 사진 위에 표시되도록 우선순위 설정 */
+    -webkit-filter: drop-shadow(0px 0px 5px #00000036);
+    filter: drop-shadow(0px 0px 5px 10px #00000031);
 }
 
 .custom-indicator {
