--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@
 .custom-carousel {
     position: relative;
     width: 100%;
+    height: 450px;
     margin: auto;
     overflow: hidden;
     border: 0px solid #ccc;
@@ -130,6 +131,7 @@
 }
 
 .custom-carousel-track {
+    height: 100%;
     display: flex;
     transition: transform 0.5s ease;
 }
@@ -197,6 +199,7 @@
     border-radius: 50%;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    border: 1px solid rgba(95, 95, 95, 0.322);
 }
 
 .custom-indicator.active {
